--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Testbed</title>
+        <title>Eclipse</title>
         <meta name="description" content="">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-        <link rel="stylesheet" href="/library/css/style.css">
+        <link rel="stylesheet" href="library/css/style.css">
     </head>
     <body>
         <div id="text" class="main">
@@ -19,7 +19,7 @@
                 </p>
             </div>
         </div>
-        <script src="/library/js/lib/jquery.2.1.1.min.js" type="text/javascript"></script>
-        <script src="/library/js/min/script.js" type="text/javascript"></script>
+        <script src="library/js/lib/jquery.2.1.1.min.js" type="text/javascript"></script>
+        <script src="library/js/min/script.js" type="text/javascript"></script>
     </body>
 </html>
